--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation 'org.springframework.session:spring-session-core'
 //    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '3.1.0'
+//    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '3.1.0'
     implementation 'org.modelmapper:modelmapper:3.1.0'
     // https://mvnrepository.com/artifact/com.h2database/h2
     runtimeOnly 'com.h2database:h2'
